refacto: better narrative entry data gestion